--- a/UCBC 2024/Simulations/Bidding2H.ipynb
+++ b/UCBC 2024/Simulations/Bidding2H.ipynb
@@ -52,7 +52,7 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-234000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -85,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.9765}]"
+       "[{'call': 'PASS', 'insta_score': 0.967}]"
       ]
      },
      "execution_count": 3,
@@ -125,11 +125,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '2H', 'insta_score': 0.007, 'expected_score': 45, 'adjustment': 0},\n",
+       "[{'call': '2S', 'insta_score': 0.226, 'expected_score': 93, 'adjustment': 11},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.9783,\n",
-       "  'expected_score': -41,\n",
-       "  'adjustment': 49}]"
+       "  'insta_score': 0.7234,\n",
+       "  'expected_score': 36,\n",
+       "  'adjustment': 36}]"
       ]
      },
      "execution_count": 4,
@@ -177,18 +177,16 @@
     {
      "data": {
       "text/plain": [
-       "['8xxx.KQxx.A.AQxx Tx.A9x.KQxxxx.Tx x.T8x.JT98xx.J8x AKQJ9x.Jxx..K9xx 0.80416 2D-P-P-X-P-P-P (7.8)  2D-P-P-X-P-P-2H-P-P-P (8.1) ',\n",
-       " 'Txx.A8xx.AJ.AQ8x x.KQT.K98xxx.Txx 8xx.9xx.QTxxx.Jx AKQJ9x.Jxx..K9xx 0.75914 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2H-P-P-P (8.9) ',\n",
-       " 'xxx.AKQx.Jx.Axxx x.9xx.AK9xxx.QTx T8x.T8x.QT8xx.J8 AKQJ9x.Jxx..K9xx 0.74239 2D-P-P-X-P-P-P (7.7)  2D-P-P-X-P-P-2H-P-P-P (8.0) ',\n",
-       " 'xxxx.KQxx.KT.AQx 8.Txx.AQJ9xx.xxx Tx.A98.8xxxx.JT8 AKQJ9x.Jxx..K9xx 0.67475 2D-P-P-X-P-P-P (7.7)  2D-P-P-X-P-P-2H-P-P-P (7.5) ',\n",
-       " 'Txx.AK9x.AQx.AQx xx.Qxx.KJ9xxx.8x 8x.T8x.T8xx.JTxx AKQJ9x.Jxx..K9xx 0.62271 2D-P-P-X-P-P-P (6.5)  2D-P-P-X-P-P-2H-X-P-3C-P-P-P (6.7) ',\n",
-       " 'T8x.AK9x.Qx.AJxx x.8xx.AJT8xx.QT8 xxx.QTx.K9xxx.xx AKQJ9x.Jxx..K9xx 0.59671 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2H-P-P-P (7.6) ',\n",
-       " 'x.AKQ98.Axx.AJ8x xxx.xx.KQT9xx.Qx T8x.Txx.J8xx.Txx AKQJ9x.Jxx..K9xx 0.57238 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2H-P-P-P (7.5) ',\n",
-       " 'Txx.AK9x.Kx.QT8x 8x.Txx.QJ98xx.AJ xx.Q8x.ATxxx.xxx AKQJ9x.Jxx..K9xx 0.51474 2D-P-P-X-P-P-P (7.8)  2D-P-P-X-P-P-2H-P-P-P (7.9) ',\n",
-       " '8.AKQ9.Axx.AQJ8x Tx.xx.KQJT8x.Txx xxxx.T8xx.9xxx.x AKQJ9x.Jxx..K9xx 0.51205 2D-P-P-X-P-P-P (7.1)  2D-P-P-X-P-P-2H-3C-P-P-P (7.5) ',\n",
-       " 'Txx.AKT9.AQx.QTx x.8xx.K98xxx.Axx 8xx.Qxx.JTxx.J8x AKQJ9x.Jxx..K9xx 0.43769 2D-P-P-X-P-P-P (7.2)  2D-P-P-X-P-P-2H-P-P-P (7.8) ',\n",
-       " '8.AKQTx.Q9x.AQJx xx.x.AKJT8x.T8xx Txxx.98xx.xxxx.x AKQJ9x.Jxx..K9xx 0.42875 2D-P-P-X-P-P-P (8.1)  2D-P-P-X-P-P-2H-P-3D-P-P-P (8.1) ',\n",
-       " 'xxx.AKQx.QTx.AQJ x.98x.AKJxxx.8xx T8x.Txx.98xx.Txx AKQJ9x.Jxx..K9xx 0.30047 2D-P-P-X-P-P-P (7.8)  2D-P-P-X-P-P-2H-X-P-P-P (7.7) ']"
+       "['x.KQT9xx.AKx.AQT Txx.Ax.QJ9xxx.Jx 8xx.8x.T8xx.8xxx AKQJ9x.Jxx..K9xx 0.79717 2D-P-P-X-P-P-P (7.6)  2D-P-P-X-P-P-2S-3H-P-P-P (8.3) ',\n",
+       " '8xx.AQxx.Ax.A8xx xx.Txx.KQJT9x.Jx Tx.K98.8xxxx.QTx AKQJ9x.Jxx..K9xx 0.62044 2D-P-P-X-P-P-P (7.8)  2D-P-P-X-P-P-2S-P-P-P (8.7) ',\n",
+       " 'x.AKQ9x.A9xx.AJ8 T8x.8x.KQJTxx.Qx xxx.Txx.8xx.Txxx AKQJ9x.Jxx..K9xx 0.45153 2D-P-P-X-P-P-P (8.7)  2D-P-P-X-P-P-2S-3H-P-P-P (8.3) ',\n",
+       " 'T8x.KQxx.Kx.AQxx xx.AT8.AJTxxx.T8 xx.9xx.Q98xx.Jxx AKQJ9x.Jxx..K9xx 0.44652 2D-P-P-X-P-P-P (8.7)  2D-P-P-X-P-P-2S-P-P-P (10.3) ',\n",
+       " 'xx.AKQ9x.QJ.AQxx T8.T8.AKT8xx.8xx xxx.xxx.9xxxx.JT AKQJ9x.Jxx..K9xx 0.28965 2D-P-P-X-P-P-P (8.0)  2D-P-P-X-P-P-2S-3H-P-P-P (7.4) ',\n",
+       " '8xx.AKQT.xx.AQTx Txx.8x.AK8xxx.Jx x.9xxx.QJT9x.8xx AKQJ9x.Jxx..K9xx 0.23851 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-P-P-P (9.6) ',\n",
+       " '8xxx.AQT9.Ax.Axx Tx.Kx.KT9xxx.Q8x x.8xxx.QJ8xx.JTx AKQJ9x.Jxx..K9xx 0.19662 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-P-P-P (9.8) ',\n",
+       " 'T8x.QTxx.AJ.AQTx xxx.Kx.KQT8xx.8x x.A98x.9xxxx.Jxx AKQJ9x.Jxx..K9xx 0.18663 2D-P-P-X-P-P-P (7.9)  2D-P-P-X-P-P-2S-P-P-P (9.5) ',\n",
+       " 'T8xx.A98x.AJ.AQx x.Kxx.K98xxxx.Jx xx.QTx.QTxx.T8xx AKQJ9x.Jxx..K9xx 0.17931 2D-P-P-X-P-P-P (7.4)  2D-P-P-X-P-P-2S-P-P-P (8.9) ',\n",
+       " 'x.AKQT98.AKx.Qxx x.xxx.QJ9xxx.AJx T8xxx.x.T8xx.T8x AKQJ9x.Jxx..K9xx 0.17292 2D-P-P-X-P-P-P (7.3)  2D-P-P-X-P-P-2S-3H-P-P-P (6.7) ']"
       ]
      },
      "execution_count": 5,
@@ -220,64 +218,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AKQJ9x.Jxx..K9xx Txx.K8x.J8xxx.xx 8.T9xx.KQ9x.AQTx xxx.AQx.ATxx.J8x\n",
-      "AKQJ9x.Jxx..K9xx Txx.A9x.AJTxx.8x x.Q8xx.KQ8x.QJxx 8xx.KTx.9xxx.ATx\n",
-      "AKQJ9x.Jxx..K9xx xx.AKQ9.9xx.QT8x x.T8xx.AKJx.Axxx T8xx.xx.QT8xxx.J\n",
-      "AKQJ9x.Jxx..K9xx Txx.QT9x.Axxx.Jx .K8xx.Jxx.AQT8xx 8xxx.Ax.KQT98x.x\n",
-      "AKQJ9x.Jxx..K9xx 8xx.8x.QJxxx.AJ8 x.QTxx.AK8xx.Qxx Txx.AK9x.T9x.Txx\n",
-      "AKQJ9x.Jxx..K9xx 8xx.QT9.QT8xx.Jx x.Kxxx.A9xx.AQxx Txx.A8x.KJxx.T8x\n",
-      "AKQJ9x.Jxx..K9xx xxx.8xx.A8xx.AQx x.AQTx.KQxx.JTxx T8x.K9x.JT9xx.8x\n",
-      "AKQJ9x.Jxx..K9xx Txx.AQ8x.QJx.A8x x.KTxx.A8xxx.QTx 8xx.9x.KT9xx.Jxx\n",
-      "AKQJ9x.Jxx..K9xx 8x.Q8x.KJTxx.Txx x.AKxx.9xxx.QJxx Txxx.T9x.AQ8x.A8\n",
-      "AKQJ9x.Jxx..K9xx xxxx.K9.AQTxxx.x T.A8xx.K9xx.QT8x 8x.QTxx.J8x.AJxx\n",
-      "AKQJ9x.Jxx..K9xx 8xxx.9xx.AK9x.8x x.KQTx.QJxx.AQxx Tx.A8x.T8xxx.JTx\n",
-      "AKQJ9x.Jxx..K9xx 8xxx.KT8.QJ9x.Tx x.AQxx.Axxx.J8xx Tx.9xx.KT8xx.AQx\n",
-      "AKQJ9x.Jxx..K9xx Txxx.9x.AKJ9.JTx x.AQTx.Q8x.AQxxx 8x.K8xx.Txxxxx.8\n",
-      "AKQJ9x.Jxx..K9xx T8x.K8x.K8x.Q8xx x.9xxx.AQxxx.ATx xxx.AQT.JT9xx.Jx\n",
-      "AKQJ9x.Jxx..K9xx xx.K9x.K9xxx.JTx T.QT8x.AT8xx.A8x 8xxx.Axx.QJx.Qxx\n",
-      "AKQJ9x.Jxx..K9xx 8xx.Kx.AJ8xx.AJx x.AT98.KT9xx.Q8x Txx.Qxxx.Qxx.Txx\n",
-      "AKQJ9x.Jxx..K9xx xx.Kxx.AJT.QT8xx T.QT98.KQ98xx.Ax 8xxx.Axx.xxxx.Jx\n",
-      "AKQJ9x.Jxx..K9xx xxx.Q9xxx.AJ8.8x x.AT8x.KQxxx.Jxx T8x.K.T9xxx.AQTx\n",
-      "AKQJ9x.Jxx..K9xx Txxx.KQx.QJT9.Jx 8.98xx.AK8xx.ATx xx.ATx.xxxx.Q8xx\n",
-      "AKQJ9x.Jxx..K9xx 8xx.A9x.AQxx.A8x x.KTxx.KJ8xx.QJx Txx.Q8x.T9xx.Txx\n",
-      "AKQJ9x.Jxx..K9xx T8x.AQ8.QJ8xx.xx x.KT9x.KTxx.AJT8 xxx.xxx.A9xx.Qxx\n",
-      "AKQJ9x.Jxx..K9xx T8x.AKT.xxx.Txxx x.Q98x.KJ98x.A8x xxx.xxx.AQTxx.QJ\n",
-      "AKQJ9x.Jxx..K9xx xxx.8x.AJxx.QTxx 8.AK9x.Q8xxx.8xx Txx.QTxx.KT9x.AJ\n",
-      "AKQJ9x.Jxx..K9xx Txxx.QTx.8xx.A8x x.A8xx.AQJ9xx.xx 8x.K9x.KTxx.QJTx\n",
-      "AKQJ9x.Jxx..K9xx xx.Kxx.QJxx.A8xx 8.A9xx.AT98xx.QJ Txxx.QT8.Kxx.Txx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.9x.AQJx.AT8 x.AT8x.KT9xx.QJx xx.KQxx.8xxx.xxx\n",
-      "AKQJ9x.Jxx..K9xx 8xxxx.Tx.AJxx.J8 T.K8xx.KT8xxx.Ax x.AQ9x.Q9x.QTxxx\n",
-      "AKQJ9x.Jxx..K9xx xx.8xxx.QJxxxx.x x.AKQT.T98x.AQ8x T8xx.9x.AKx.JTxx\n",
-      "AKQJ9x.Jxx..K9xx xxxx.Ax.Axx.Qxxx 8.Q8xx.KJT8xx.AJ Tx.KT9x.Q9xx.T8x\n",
-      "AKQJ9x.Jxx..K9xx Txx.Kx.AKJTx.Jxx x.A9xx.Q98xx.A8x 8xx.QT8x.xxx.QTx\n",
-      "AKQJ9x.Jxx..K9xx xxx.AKQT.Jxxx.Qx x.9xxx.AK98x.AJx T8x.8x.QTxx.T8xx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.K9xx.8xxx.A x.AQxx.KQT9xx.Q8 xx.T8.AJx.JTxxxx\n",
-      "AKQJ9x.Jxx..K9xx xxx.AKQT.Kxx.Jxx T.8xxx.AQTxxx.AT 8xx.9x.J98x.Q8xx\n",
-      "AKQJ9x.Jxx..K9xx Tx.T8xx.A9xx.T8x .AKxx.KQTxx.AJxx 8xxxx.Q9.J8xx.Qx\n",
-      "AKQJ9x.Jxx..K9xx xxx.Txx.KTxxx.8x 8.KQ8x.AJ8x.QJTx Txx.A9x.Q9xx.Axx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.xx.Axxx.Txx x.AKQ9.QJT9xx.xx xx.T8xx.K8x.AQJ8\n",
-      "AKQJ9x.Jxx..K9xx 8xx.Axx.8xx.J8xx x.KQ8x.AQT9xx.Tx Txx.T9x.KJxx.AQx\n",
-      "AKQJ9x.Jxx..K9xx Txx.Qx.KJ9xx.JTx x.AKxx.xxx.AQ8xx 8xx.T98x.AQT8x.x\n",
-      "AKQJ9x.Jxx..K9xx Txx.KQ9x.9xx.Qxx x.AT8x.AQJxxx.J8 8xx.xx.KT8x.ATxx\n",
-      "AKQJ9x.Jxx..K9xx T8x.AQx.Qxxx.QJx x.98xx.AJTxx.Axx xxx.KTx.K98x.T8x\n",
-      "AKQJ9x.Jxx..K9xx T8xx.QT.Kxx.JT8x x.Axxx.AQ9xxx.Ax xx.K98x.JT8x.Qxx\n",
-      "AKQJ9x.Jxx..K9xx xxx.xx.Q9x.Qxxxx T.AQ8x.AJT8xx.JT 8xx.KT9x.Kxxx.A8\n",
-      "AKQJ9x.Jxx..K9xx xxxx.xx.AJxx.Jxx T.AK98.QT98x.T8x 8x.QTxx.Kxxx.AQx\n",
-      "AKQJ9x.Jxx..K9xx Txx.8xx.AQ8xx.xx 8.AKQx.Txxx.AT8x xxx.T9x.KJ9x.QJx\n",
-      "AKQJ9x.Jxx..K9xx xxx.xxx.Q8xxx.8x x.QT8x.AKTx.AQJx T8x.AK9.J9xx.Txx\n",
-      "AKQJ9x.Jxx..K9xx 8xx.K98.AQTx.8xx x.ATxx.J9xxx.AQJ Txx.Qxx.K8xx.Txx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.xx.KJ9xx.AQ x.AK9x.Q8xxx.JTx xx.QT8x.ATx.8xxx\n",
-      "AKQJ9x.Jxx..K9xx T8x.KT8xx.Kxx.xx x.AQ9x.AJT9x.Qxx xxx.x.Q8xxx.AJT8\n",
-      "AKQJ9x.Jxx..K9xx 8xxx.Q9x.Kxx.AT8 x.ATxx.AQJTx.QJx Tx.K8x.98xxx.xxx\n",
-      "AKQJ9x.Jxx..K9xx T8.xxx.KT8xx.QJT x.AQT8.A9xxx.Axx xxxx.K9x.QJx.8xx\n",
-      "AKQJ9x.Jxx..K9xx 8x.K98x.QTxx.Jxx x.AQTx.KJ8x.AQTx Txxx.xx.A9xxx.8x\n",
-      "AKQJ9x.Jxx..K9xx Txx.Txxx.J8xx.Qx x.AQ9x.KQxx.AJxx 8xx.K8.AT9xx.T8x\n",
-      "AKQJ9x.Jxx..K9xx Tx.KT8x.Kxxx.8xx 8.Axxx.AQJ8x.ATx xxxx.Q9.T9xx.QJx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.9x.AK98x.JT x.AKxx.JTxxx.Axx xx.QT8x.Qxx.Q8xx\n",
-      "AKQJ9x.Jxx..K9xx Txx.K9x.QT8.Q8xx x.AQxx.A9xxx.AJx 8xx.T8x.KJxxx.Tx\n",
-      "AKQJ9x.Jxx..K9xx 8xx.T8xx.Qxxx.QJ x.KQxx.AK9xx.ATx Txx.A9.JT8x.8xxx\n",
-      "AKQJ9x.Jxx..K9xx T8xx.Txx.JT8x.A8 x.AKQ8.AK9x.JTxx xx.9xx.Qxxxx.Qxx\n",
-      "AKQJ9x.Jxx..K9xx xx.8.Q98xxx.ATxx 8.AK9x.AKJT.J8xx Txxx.QTxxx.xxx.Q\n"
+      "AKQJ9x.Jxx..K9xx Txx.AKx.KQx.T8xx 8.8xxx.ATxxx.AQx xxx.QT9.J98xx.Jx\n",
+      "AKQJ9x.Jxx..K9xx 8x.A98x.J8x.QJTx x.Txxx.AKTxx.A8x Txxx.KQ.Q9xxx.xx\n",
+      "AKQJ9x.Jxx..K9xx Txxx.KTx.QTxx.Qx .A98x.K98xx.AT8x 8xx.Qxx.AJxx.Jxx\n",
+      "AKQJ9x.Jxx..K9xx xxx.A8x.QJxxxx.J 8.QTxx.ATx.AQTxx Txx.K9x.K98x.8xx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.AKQx.JTxx.A .T9xx.AKxxx.QT8x Txx.8x.Q98x.Jxxx\n",
+      "AKQJ9x.Jxx..K9xx T8x.ATx.T8xxx.T8 x.K8xx.QJx.AQJxx xxx.Q9x.AK9xx.xx\n",
+      "AKQJ9x.Jxx..K9xx T8x.K8x.QT98x.Ax x.QTxx.AKxx.QJxx xxx.A9x.Jxxx.T8x\n",
+      "AKQJ9x.Jxx..K9xx 8xx.Tx.Axxxx.Q8x x.8xxx.KQ9x.ATxx Txx.AKQ9.JT8x.Jx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.Ax.QJ9xx.Qxx x.Qxxx.AKxxx.JT8 Txx.KT98.T8x.Axx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.AKx.Q9xx.Q8x x.98xx.A8xx.AJxx Txx.QTx.KJTxx.Tx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.Kxx.Axxx.Jx x.QT8x.KJT98.AQx Tx.A9x.Qxxx.T8xx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.AQxx.KQ9x.T x.KT8x.AJTx.QJxx Tx.9x.8xxxx.A8xx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.Txx.AQ9x.Axx x.KQ8x.K8xx.QJTx Txx.A9x.JTxxx.8x\n",
+      "AKQJ9x.Jxx..K9xx xxx.AQTx.Q98x.Qx x.Kxxx.Axxxx.A8x T8x.98.KJTx.JTxx\n",
+      "AKQJ9x.Jxx..K9xx xxx.Q9.QJT9xx.T8 x.AK8x.Kxx.QJxxx T8x.Txxx.A8xx.Ax\n",
+      "AKQJ9x.Jxx..K9xx Tx.A9x.KQJ9.JTxx x.QTxx.AT8xx.AQx 8xxx.K8x.xxxx.8x\n",
+      "AKQJ9x.Jxx..K9xx xx.K8xx.Jxxx.J8x 8.AQTx.KT9x.QTxx Txxx.9x.AQ8xx.Ax\n",
+      "AKQJ9x.Jxx..K9xx xxx.A.J9xxx.A8xx 8.KQxx.A8xx.QJTx Txx.T98xx.KQTx.x\n",
+      "AKQJ9x.Jxx..K9xx 8x.Kx.J9xx.J8xxx x.AT8x.Kxxx.AQTx Txxx.Q9xx.AQT8x.\n",
+      "AKQJ9x.Jxx..K9xx Txxx.Kxxx.AQ9x.x x.AQ9x.KT8x.QTxx 8x.T8.Jxxxx.AJ8x\n",
+      "AKQJ9x.Jxx..K9xx Txxx.9x.AKx.Qxxx x.AQ8x.T9xx.AJT8 8x.KTxx.QJ8xxx.x\n",
+      "AKQJ9x.Jxx..K9xx xxxx.Kx.Txxx.J8x 8.AT9x.AQJ98.Qxx Tx.Q8xx.Kxxx.ATx\n",
+      "AKQJ9x.Jxx..K9xx T8x.KTxx.QJx.AQJ x.Q8xx.AKxxx.Txx xxx.A9.T98xx.8xx\n",
+      "AKQJ9x.Jxx..K9xx Txxx.AQx.Q8xxx.A x.KT8x.A9xx.QT8x 8x.9xx.KJTx.Jxxx\n",
+      "AKQJ9x.Jxx..K9xx xxxx.KQ.Q8xx.Q8x x.A9xx.AKJ9x.Jxx T8.T8xx.Txxx.ATx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.KQ8.A98xxx.J x.ATxx.KTxx.AQT8 Txx.9xx.QJx.xxxx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.Kx.KT9x.T8x T.AT8x.AQJ8x.Jxx xx.Q9xx.xxxx.AQx\n",
+      "AKQJ9x.Jxx..K9xx Txxx.98.AKTxx.Tx x.AKxx.QJ9x.J8xx 8x.QTxx.8xxx.AQx\n",
+      "AKQJ9x.Jxx..K9xx T8xx.Ax.QTx.xx x.Q98x.AKxx.AJTx x.KTx.J98xxx.Q8x\n",
+      "AKQJ9x.Jxx..K9xx xxx.Qxx.KJ8xx.Qx x.AKxx.Axxx.J8xx T8x.T98.QT9x.ATx\n",
+      "AKQJ9x.Jxx..K9xx Tx.KT9x.AQxxx.Tx x.AQ8x.KJT8x.Jxx 8xxx.xx.9xx.AQ8x\n",
+      "AKQJ9x.Jxx..K9xx T8xx.K9x.Axxx.Jx x.AQ8x.KQT9.QT8x xx.Txx.J8xxx.Axx\n",
+      "AKQJ9x.Jxx..K9xx xxx.QT9x.Axx.xxx 8.A8xx.KQT8x.T8x Txx.Kx.J9xxx.AQJ\n",
+      "AKQJ9x.Jxx..K9xx xx.Q9x.KJT8x.ATx x.K8xx.AQxxx.8xx T8xx.ATx.9xx.QJx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.T8x.QJ8xx.xx x.AQxx.ATxx.QJ8x Txx.K9x.K9xx.ATx\n",
+      "AKQJ9x.Jxx..K9xx Txx.KT98.Q9xx.QJ x.AQxx.KT8xx.Axx 8xx.xx.AJxx.T8xx\n",
+      "AKQJ9x.Jxx..K9xx xxx.Kxx.Qxxx.AJT T.AQ9x.K98xx.xxx 8xx.T8x.AJTx.Q8x\n",
+      "AKQJ9x.Jxx..K9xx xxx.KTxx.Axxx.xx T.AQxx.QJxxx.Jxx 8xx.98.KT98.AQT8\n",
+      "AKQJ9x.Jxx..K9xx xx.ATxx.AJxx.Qxx T.KQ8x.T9xx.ATxx 8xxx.9x.KQ8xx.J8\n",
+      "AKQJ9x.Jxx..K9xx xx.Q8x.AK8xx.Jxx x.AK9x.QTxxx.AT8 T8xx.Txx.J9x.Qxx\n",
+      "AKQJ9x.Jxx..K9xx Txx.Ax.A98xx.Q8x x.KQTx.QJxxx.AJx 8xx.98xx.KTx.Txx\n",
+      "AKQJ9x.Jxx..K9xx Txxx.9x.A8x.AT8x x.AQTx.QJTxx.QJx 8x.K8xx.K9xxx.xx\n",
+      "AKQJ9x.Jxx..K9xx T8xx.Qx.AKJT9.xx x.AK8x.8xxx.AQJx xx.T9xx.Qxxx.T8x\n",
+      "AKQJ9x.Jxx..K9xx xxx.A8x.AQxx.J8x x.KQxx.KJ8xx.Txx T8x.T9x.T9xx.AQx\n",
+      "AKQJ9x.Jxx..K9xx xx.T8xx.JTxx.Axx x.AKQx.Q9xxx.QTx T8xx.9x.AK8x.J8x\n",
+      "AKQJ9x.Jxx..K9xx Txxx.xx.9xxxx.AQ x.A98x.AKQTx.Jxx 8x.KQTx.J8x.T8xx\n",
+      "AKQJ9x.Jxx..K9xx xx.K8x.AK8xx.QJT x.AQ9x.JTxxx.Axx T8xx.Txx.Q9x.8xx\n",
+      "AKQJ9x.Jxx..K9xx xxxx.9x.Qxxx.AQx .KT8x.AKT8xx.8xx T8x.AQxx.J9x.JTx\n",
+      "AKQJ9x.Jxx..K9xx Txx.Q8xx.AQ9x.8x .K9xx.KJT8xx.AJx 8xxx.AT.xxx.QTxx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.Axx.KTx.QJx T.KQTx.AQ98xx.Tx xx.98x.Jxxx.A8xx\n",
+      "AKQJ9x.Jxx..K9xx xxx.QTx.AKxx.QJx x.K8xx.QJ9xxx.AT T8x.A9x.T8x.8xxx\n",
+      "AKQJ9x.Jxx..K9xx T8xx.Q8x.J9x.ATx x.K9xx.AQT8xx.Jx xx.ATx.Kxxx.Q8xx\n",
+      "AKQJ9x.Jxx..K9xx 8xxx.QT8.98xx.Tx T.AKxx.AKxx.J8xx xx.9xx.QJTxx.AQx\n",
+      "AKQJ9x.Jxx..K9xx x.9xxx.AJxxx.A8x 8.AKQx.KT8x.QJTx Txxxx.T8.Q9xx.xx\n",
+      "AKQJ9x.Jxx..K9xx xxxx.xx.AKx.A8xx x.AKT9.QT9xxx.Qx T8.Q8xx.J8xx.JTx\n",
+      "AKQJ9x.Jxx..K9xx Txx.Ax.T98x.J8xx 8.KQ8x.AQxxxx.AT xxx.T9xx.KJx.Qxx\n",
+      "AKQJ9x.Jxx..K9xx T8xx.Ax.Txxx.JTx x.KQ8x.KJ98x.AQ8 xx.T9xx.AQxx.xxx\n",
+      "AKQJ9x.Jxx..K9xx Txx.8x.98xxx.QTx x.QT9x.AKx.AJ8xx 8xx.AKxx.QJTxx.x\n",
+      "AKQJ9x.Jxx..K9xx Txx.8x.AQxx.AQJx x.KQ9x.KJTxxx.xx 8xx.ATxx.98x.T8x\n",
+      "AKQJ9x.Jxx..K9xx xx.9x.Axxx.AQJTx 8.AQ8x.QJT8xx.xx Txxx.KTxx.K9x.8x\n",
+      "AKQJ9x.Jxx..K9xx xx.Qxx.QJxx.JT8x .K8xx.KT8xxx.Axx T8xxx.AT9.A9x.Qx\n",
+      "AKQJ9x.Jxx..K9xx 8xx.Txx.xxx.AQ8x T.AK8x.AKQx.Txxx xxx.Q9x.JT98xx.J\n",
+      "AKQJ9x.Jxx..K9xx Tx.T9xx.9xx.xxxx x.AKQ8.AQT8xx.QT 8xxx.xx.KJxx.AJ8\n",
+      "AKQJ9x.Jxx..K9xx T8xx.AQTx.QT8x.x x.K98x.Axx.AT8xx xx.xx.KJ9xxx.QJx\n",
+      "AKQJ9x.Jxx..K9xx Txx.xx.J9xx.Q8xx x.AQ9x.KQ8xx.AJx 8xx.KT8x.ATxx.Tx\n"
      ]
     }
    ],
