--- a/UCBC 2024/Simulations/Bidding5D.ipynb
+++ b/UCBC 2024/Simulations/Bidding5D.ipynb
@@ -51,8 +51,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3233000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-3233000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
@@ -85,7 +85,14 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '1N', 'insta_score': 0.9994}]"
+       "[{'call': '3D',\n",
+       "  'insta_score': 0.3567,\n",
+       "  'expected_score': -78,\n",
+       "  'adjustment': 18},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.6131,\n",
+       "  'expected_score': -162,\n",
+       "  'adjustment': 31}]"
       ]
      },
      "execution_count": 3,
@@ -98,9 +105,16 @@
     "vuln_ns, vuln_ew = False, False\n",
     "\n",
     "# you sit West and hold:\n",
-    "hand = 'AQ8.KQ94.JT.KJ52'\n",
+    "hand = 'J.J82.A98632.T52'\n",
     "\n",
-    "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\"]\n",
+    "# the auction goes:\n",
+    "# (a few words about 'PAD_START':\n",
+    "# the auction is padded to dealer North\n",
+    "# if North is not dealer, than we have to put in a 'PAD_START' for every seat that was skipped\n",
+    "# if East deals we have one pad (because North is skipped)\n",
+    "# if South deals we have two pads (because North and East are skipped)\n",
+    "# etc.)\n",
+    "auction = [\"PAD_START\", \"1H\", \"1N\", \"2S\"]\n",
     "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
     "\n",
     "bid = bot_bid.bid(auction)\n",
@@ -112,17 +126,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bfe98f56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'call': '4H',\n",
-       "  'insta_score': 0.7903,\n",
-       "  'expected_score': 349,\n",
-       "  'adjustment': 40},\n",
-       " {'call': '3N', 'insta_score': 0.1586, 'expected_score': 275, 'adjustment': 8}]"
+       "['J.J8x.A98xxx.Txx Q.AQT9xx.Jxx.K9x AKx.Kxx.KTx.Q8xx T98xxxxx.x.Q.AJx 0.24957 1H-1N-2S-P-3H-P-4S-P-P-P (9.2)  1H-1N-2S-3D-3H-P-4S-P-P-P (9.2) ',\n",
+       " 'J.J8x.A98xxx.Txx 98x.AKQ9xxx..K9x Ax.Txx.KQJxx.AJx KQTxxxx..Tx.Q8xx 0.23582 1H-1N-2S-P-4H-P-P-P (10.1)  1H-1N-2S-3D-4H-P-P-P (10.1) ',\n",
+       " 'J.J8x.A98xxx.Txx xx.AKQxxx.QT.J8x Q9x.T9x.KJx.AKQ9 AKT8xxx.x.xx.xxx 0.20850 1H-1N-2S-P-3H-P-4S-P-P-P (8.8)  1H-1N-2S-3D-3H-P-3S-P-4H-P-P-P (8.1) ',\n",
+       " 'J.J8x.A98xxx.Txx Qxx.AQxxxx.Q.J9x xx.KT9x.KJT.AKQx AKT98xx..xxx.8xx 0.20784 1H-1N-2S-P-3H-P-4S-P-P-P (9.7)  1H-1N-2S-3D-P-P-P (9.6) ',\n",
+       " 'J.J8x.A98xxx.Txx 8x.QT9xxx.KQx.Ax KQx.AKx.JTx.QJ98 AT9xxxx.x.x.Kxxx 0.20739 1H-1N-2S-P-3H-P-4S-P-P-P (9.1)  1H-1N-2S-3D-3H-P-4S-P-P-P (9.1) ']"
       ]
      },
      "execution_count": 4,
@@ -131,7 +144,32 @@
     }
    ],
    "source": [
-    "auction = [\"PAD_START\", \"PAD_START\", \"PAD_START\", \"PASS\", \"1N\", \"PASS\", \"3S\",\"PASS\"]\n",
+    "bid.samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bfe98f56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'call': '5D', 'insta_score': 0.1046, 'expected_score': 46, 'adjustment': 5},\n",
+       " {'call': 'PASS',\n",
+       "  'insta_score': 0.863,\n",
+       "  'expected_score': -244,\n",
+       "  'adjustment': 43}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auction = [\"PAD_START\", \"PAD_START\", \"1H\", \"1N\", \"2S\",\"3D\",\"3S\",\"PASS\",\"4S\"]\n",
     "bid = bot_bid.bid(auction)\n",
     "\n",
     "bid.to_dict()['candidates']"
@@ -163,36 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "55b647a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AQ8.KQ9x.JT.KJxx JT9xx.Axx.xx.9xx x.JT8x.AQ9x.A8xx Kxxx.xx.K8xxx.QT 0.99088 P-1N-P-3S-P-4H-P-P-P (10.6)  P-1N-P-3S-P-3N-P-P-P (9.1) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx J9xxx.J8x.xx.AQx .Axxx.AKQ9x.T9xx KTxxx.Tx.8xxx.8x 0.98844 P-1N-P-3S-P-4H-P-P-P (11.6)  P-1N-P-3S-P-3N-P-P-P (10.4) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx Txxxx.JT8x.Axx.T 9.Axxx.K98x.Qxxx KJxx.x.Qxxx.A98x 0.98477 P-1N-P-3S-P-4H-P-P-P (9.3)  P-1N-P-3S-P-3N-P-P-P (8.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx Kxxxx.Jx.K9xxx.x x.A8xx.xxx.AQxxx JT9x.Txx.AQ8.T98 0.98457 P-1N-P-3S-P-4H-P-P-P (10.8)  P-1N-P-3S-P-3N-P-P-P (9.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KT9xx.Jxx.Q98x.Q x.ATxx.Kxxx.A98x Jxxx.8x.Axx.Txxx 0.97891 P-1N-P-3S-P-4H-P-P-P (11.0)  P-1N-P-3S-P-3N-P-P-P (9.5) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx K9xx.Txx.9x.Qxxx T.Jxxx.AKxx.AT98 Jxxxx.A8.Q8xxx.x 0.97796 P-1N-P-3S-P-4H-P-P-P (11.2)  P-1N-P-3S-P-3N-P-P-P (10.0) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx Jxxxx.Tx.Kxx.A9x x.AJxx.Axxx.8xxx KT9x.8xx.Q98x.QT 0.97521 P-1N-P-3S-P-4H-P-P-P (10.4)  P-1N-P-3S-P-3N-P-P-P (8.6) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx JTxx.A8x.9x.AQ9x x.Txxx.AKQ8x.Txx K9xxx.Jx.xxxx.8x 0.97133 P-1N-P-3S-P-4H-P-P-P (9.8)  P-1N-P-3S-P-3N-P-P-P (8.3) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KJTx.Tx.Qxxx.AQx x.AJxx.AK9x.T9xx 9xxxx.8xx.8xx.8x 0.96793 P-1N-P-3S-P-4H-P-P-P (10.9)  P-1N-P-3S-P-3N-P-P-P (9.8) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx J9xxx.xx.Q8xx.AT x.AJ8x.A9xx.8xxx KTxx.Txx.Kxx.Q9x 0.96686 P-1N-P-3S-P-4H-P-P-P (9.9)  P-1N-P-3S-P-3N-P-P-P (8.4) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KJTxx.Axx.x.9xxx x.Txxx.AKxxx.ATx 9xxx.J8.Q98xx.Q8 0.95724 P-1N-P-3S-P-4H-P-P-P (10.7)  P-1N-P-3S-P-3N-P-P-P (9.6) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KJxx.Jxxx.A9xx.T x.A8xx.KQ8xx.Q9x T9xxx.T.xx.A8xxx 0.95206 P-1N-P-3S-P-4H-P-P-P (10.0)  P-1N-P-3S-P-3N-P-P-P (9.9) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KT9x.8xxx.K9x.8x x.AJxx.A8xx.AQxx Jxxxx.T.Qxxx.T9x 0.94460 P-1N-P-3S-P-4H-P-P-P (12.3)  P-1N-P-3S-P-3N-P-P-P (11.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KTxx.Ax.98xx.Q9x J.T8xx.Axxx.AT8x 9xxxx.Jxx.KQx.xx 0.93446 P-1N-P-3S-P-4H-P-P-P (10.5)  P-1N-P-3S-P-3N-P-P-P (8.4) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx xxxx.A8x.Qxx.8xx K.JTxx.AK98xx.Q9 JT9xx.xx.xx.ATxx 0.69013 P-1N-P-3S-P-4H-P-4N-P-6H-P-P-P (11.1)  P-1N-P-3S-P-3N-P-4C-P-4N-P-6D-P-P-P (10.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx Tx.JT8x.K8xxxx.x J.Axxx.A9x.AQ98x Kxxxxx.x.Qx.Txx 0.62778 P-1N-P-3S-P-4H-P-4N-P-6H-P-P-P (11.4)  P-1N-P-3S-P-3N-P-P-P (11.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx KJTxxx.xx.Axx.Qx .Axxx.K9xxx.Axxx 9xxx.JT8.Q8x.T98 0.44469 P-1N-P-3S-P-4H-P-P-P (11.5)  P-1N-P-3S-P-3N-P-P-P (9.1) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx Txxx.x.Kxxx.QT9x J.Jxxx.A8xxx.A8x K9xxx.AT8x.Q9.xx 0.39171 P-1N-P-3S-P-4H-P-P-P (10.0)  P-1N-P-3S-P-3N-P-P-P (8.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx JT9xxx.Txxx.x.Ax K.A8xx.KQxxx.QTx xxx.J.A98xx.98xx 0.29410 P-1N-P-3S-P-4H-P-P-P (10.3)  P-1N-P-3S-P-3N-P-P-P (10.7) ',\n",
-       " 'AQ8.KQ9x.JT.KJxx T9xx.8x.K8xx.Q8x x.JTxx.Axxx.ATxx KJxxx.Axx.Q9x.9x 0.27926 P-1N-P-3S-P-4H-P-P-P (10.8)  P-1N-P-3S-P-3N-P-P-P (9.1) ']"
+       "['KQ8xxxx..QT.9xxx J.J8x.A98xxx.Txx AT9x.9xxxxx.x.AQ x.AKQT.KJxx.KJ8x 0.25982 1H-1N-2S-3D-3S-P-4S-P-P-P (10.5)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (10.8) ',\n",
+       " 'AQTxxxx.x.T.98xx J.J8x.A98xxx.Txx K8x.AK9xx.xx.Qxx 9x.QTxx.KQJx.AKJ 0.25405 1H-1N-2S-3D-3S-P-4S-P-P-P (9.7)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (10.1) ',\n",
+       " 'AQT8xxx.x.x.8xxx J.J8x.A98xxx.Txx K9x.KTxxx.KTx.Qx xx.AQ9x.QJx.AKJ9 0.24568 1H-1N-2S-3D-3S-P-4S-P-P-P (8.6)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.9) ',\n",
+       " 'AQ8xxxx.T.J.98xx J.J8x.A98xxx.Txx Txx.AK9xxx.Qx.Kx K9.Qxx.KTxx.AQJx 0.22895 1H-1N-2S-3D-3S-P-4S-P-P-P (9.5)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.5) ',\n",
+       " 'AQTxxxxx.x.x.Jxx J.J8x.A98xxx.Txx 98x.AQ9xx.x.KQxx K.KTxx.KQJTx.A98 0.17219 1H-1N-2S-3D-3S-P-4S-P-P-P (11.0)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.8) ']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7101e514",
    "metadata": {},
    "outputs": [
@@ -221,18 +244,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AQ8.KQ9x.JT.KJxx KJ9xx.8xxx.xx.Tx x.AJxx.98xx.AQxx Txxx.T.AKQxx.98x\n",
-      "AQ8.KQ9x.JT.KJxx KTxxxx.x.A9xx.9x J.ATxx.Q8x.QT8xx 9xx.J8xx.Kxxx.Ax\n",
-      "AQ8.KQ9x.JT.KJxx T9xx.AJx.AQ9x.T8 x.T8xx.Kxxx.AQ9x KJxxx.xx.8xx.xxx\n",
-      "AQ8.KQ9x.JT.KJxx KJ9.Jxx.KQ8.QTxx T.Axxx.A9x.A98xx xxxxxx.T8.xxxxx.\n",
-      "AQ8.KQ9x.JT.KJxx KJx.Jxx.K8xx.Q9x x.AT8x.AQxx.ATxx T9xxxx.xx.9xx.8x\n",
-      "AQ8.KQ9x.JT.KJxx KJxxxx.Tx.8xxx.Q x.AJxx.A9.AT9xxx T9x.8xx.KQxxx.8x\n",
-      "AQ8.KQ9x.JT.KJxx xxxxx.xxx.8x.A9x J.T8xx.AKQxxx.Qx KT9x.AJ.9xx.T8xx\n",
-      "AQ8.KQ9x.JT.KJxx KJTx.T.Qxxxx.T9x x.8xxx.A98x.AQxx 9xxxx.AJxx.Kx.8x\n",
-      "AQ8.KQ9x.JT.KJxx Txxx.Txxx.xx.ATx x.AJ8x.AQxxx.Q8x KJ9xx.x.K98x.9xx\n",
-      "AQ8.KQ9x.JT.KJxx xxxx.8xx.Axx.A9x K.AJxx.K98x.Q8xx JT9xx.Tx.Qxxx.Tx\n",
-      "AQ8.KQ9x.JT.KJxx xxxx.Txx.Kxx.Q98 T.AJxx.A8x.Txxxx KJ9xx.8x.Q9xxx.A\n",
-      "AQ8.KQ9x.JT.KJxx T9xxx.A8x.Qx.T9x K.Txxx.K8xxx.AQx Jxxx.Jx.A9xx.8xx\n"
+      "J.J8x.A98xxx.Txx x.xxxx.QJxx.Q8xx AKTxxxx.AKQT..AK Q98x.9x.KTx.J9xx\n",
+      "J.J8x.A98xxx.Txx 9x.KTx.QJxxx.Q8x AKQTxxxx.AQ.K.AK 8x.9xxxx.T.J9xxx\n",
+      "J.J8x.A98xxx.Txx x.xxxx.Kxx.98xxx AKQ9xxxx.AQ.Q.AK T8x.KT9x.JTx.QJx\n",
+      "J.J8x.A98xxx.Txx xx.Txxx.KJTx.Q9x AKQ98xx.AQ9x..AK Txx.Kx.Qxx.J8xxx\n",
+      "J.J8x.A98xxx.Txx xx.Txx.QTxx.Q9xx AKQT98xx.AKQ..A8 xx.9xxx.KJx.KJxx\n"
      ]
     }
    ],
