--- a/UCBC 2024/Simulations/OpeningLead6N.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6N.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Opening Lead\n",
     "\n",
-    "This is a tutorial for how to use the opening lead engine."
+    "Checking the opening lead for a specific contract"
    ]
   },
   {
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
