--- a/UCBC 2024/Simulations/OpeningLead6H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6H.ipynb
@@ -52,8 +52,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
