--- a/UCBC 2024/Simulations/BiddingCrazy.ipynb
+++ b/UCBC 2024/Simulations/BiddingCrazy.ipynb
@@ -46,7 +46,8 @@
     "import conf\n",
     "import numpy as np\n",
     "\n",
-    "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n"
+    "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
+    "np.random.seed(42)"
    ]
   },
   {
@@ -63,7 +64,7 @@
       "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-3233000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-32768000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -83,8 +84,17 @@
    "source": [
     "### Bidding through an entire auction for all four hands\n",
     "\n",
-    "Now we'll take a random deal and let the bot bid for each hand. We assume North deals and nobody is vulnerable."
+    "Now we'll take a random deal and let the bot bid for each hand. We assume North deals and nobody is vulnerable.\n",
+    "\n",
+    "This script was used to detect the reason for some strange bidding. But the error is fixed, so this should look normal now"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -116,15 +126,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['PAD_START', 'PAD_START', 'PAD_START', '1C', 'PASS', '1H', '1S', '2C', '2D', '3C', '3D', 'PASS', '4S', '5C', 'PASS', 'PASS', 'X', 'PASS', 'PASS', 'PASS']\n"
+      "['PAD_START', 'PAD_START', 'PAD_START', '1C', 'PASS', '1H', '1S', '2C', '2S', '3C', '3S', '4C', '4S', '5C', 'PASS', 'PASS', 'X', 'PASS', 'PASS', 'PASS']\n"
      ]
     }
    ],
    "source": [
-    "#auction = ['PAD_START','PAD_START','PAD_START']  # since West deals we need 'PAD_START'\n",
-    "auction = []  # since West deals we need 'PAD_START'\n",
+    "auction = ['PAD_START','PAD_START','PAD_START']  # since West deals we need 'PAD_START'\n",
     "\n",
-    "turn_i = 3  # whose turn is it to bid\n",
+    "turn_i = len(auction) % 4 # whose turn is it to bid\n",
     "step = 0\n",
     "\n",
     "while not bidding.auction_over(auction):\n",
